Issue #150 Peak matching code and adjustments for finding IMS drift times matching back to the XAMT DB.  This is related to #150.

--- a/src/MultiAlignWin/Properties/Settings.settings
+++ b/src/MultiAlignWin/Properties/Settings.settings
@@ -173,5 +173,8 @@
     <Setting Name="UserAlignmentOptionsNETBinSize" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0.001</Value>
     </Setting>
+    <Setting Name="UserClusterOptionsDriftTimeTolerance" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
