--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -176,6 +176,9 @@
             <setting name="UserAlignmentOptionsNETBinSize" serializeAs="String">
                 <value>0.001</value>
             </setting>
+            <setting name="UserClusterOptionsDriftTimeTolerance" serializeAs="String">
+                <value>50</value>
+            </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
 </configuration>
