Issue #188 Settings objects did not propagated to config file properly for #188

--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -179,6 +179,27 @@
             <setting name="UserClusterOptionsDriftTimeTolerance" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="SMARTIsDataPaired" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SMARTNETTolerance" serializeAs="String">
+                <value>0.05</value>
+            </setting>
+            <setting name="SMARTMassTolerance" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="SMARTUsePriorProbabilities" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SMARTPairedMass" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="UserDBFormMTDBExperimentFilter" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UserDBFormMTDBPriorProbabilities" serializeAs="String">
+                <value />
+            </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
 </configuration>
