Issue #186 Adds experiment filters to the database loading form.

--- a/src/MultiAlignWin/Properties/Settings.settings
+++ b/src/MultiAlignWin/Properties/Settings.settings
@@ -197,5 +197,11 @@
     <Setting Name="UserDBFormMTDBPriorProbabilities" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="UserDBFormExperimentFilter" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="UserDBFormExperimentExclusionFilter" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
