--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -200,6 +200,12 @@
             <setting name="UserDBFormMTDBPriorProbabilities" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UserDBFormExperimentFilter" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="UserDBFormExperimentExclusionFilter" serializeAs="String">
+                <value />
+            </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
 </configuration>
