Issue #194 The configuration file for this ticket was not committed.  Related to settings stored in Properties.Settings.Default.

--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -206,6 +206,15 @@
             <setting name="UserDBFormExperimentExclusionFilter" serializeAs="String">
                 <value />
             </setting>
+            <setting name="UserPeakMatchingNETTolerance" serializeAs="String">
+                <value>0.03</value>
+            </setting>
+            <setting name="UserPeakMatchingMassTolerance" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="UserPeakMatchingDriftTimeTolerance" serializeAs="String">
+                <value>50</value>
+            </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
 </configuration>
