--- a/src/MultiAlignWin/MultiAlignWin.csproj
+++ b/src/MultiAlignWin/MultiAlignWin.csproj
@@ -186,6 +186,37 @@
     <Compile Include="Forms\Factors\frmLabelGroupEdit.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\Filters\CalibratedMassFilterControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Filters\CalibratedMassFilterControl.Designer.cs">
+      <DependentUpon>CalibratedMassFilterControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Filters\ChargeStateFilterControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Filters\ChargeStateFilterControl.Designer.cs">
+      <DependentUpon>ChargeStateFilterControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Filters\DataFilters.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Filters\DataFilters.Designer.cs">
+      <DependentUpon>DataFilters.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Filters\IFilterControl.cs" />
+    <Compile Include="Forms\Filters\MembersInClusterControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Filters\MembersInClusterControl.Designer.cs">
+      <DependentUpon>MembersInClusterControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Filters\NetFilterControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\Filters\NetFilterControl.Designer.cs">
+      <DependentUpon>NetFilterControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\formUMCData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -372,6 +403,14 @@
     <EmbeddedResource Include="Forms\Factors\frmLabelGroupEdit.resx">
       <DependentUpon>frmLabelGroupEdit.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Filters\DataFilters.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>DataFilters.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Filters\MembersInClusterControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>MembersInClusterControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\formUMCData.resx">
       <SubType>Designer</SubType>
