Issue #201 Added a min MS/MS observation count filter to the MtdbLoader class in mixed mode C++.  This checks to see if the num_observations_passing_filter is >= min MS/MS observation count.

--- a/src/MultiAlignWin/app.config
+++ b/src/MultiAlignWin/app.config
@@ -215,6 +215,9 @@
             <setting name="UserPeakMatchingDriftTimeTolerance" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="UserDBFormMinObservationCountFilter" serializeAs="String">
+                <value>0</value>
+            </setting>
         </MultiAlignWin.Properties.Settings>
     </userSettings>
 </configuration>
