Builds the MA engine to the lib folder as a post build event.

--- a/src/MultiAlign/MultiAlign.vcproj
+++ b/src/MultiAlign/MultiAlign.vcproj
@@ -93,6 +93,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="copy $(SolutionDir)\build\$(ConfigurationName)\$(TargetFileName) $(SolutionDir)..\lib"
 			/>
 		</Configuration>
 		<Configuration
@@ -168,6 +169,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="copy $(SolutionDir)\build\$(ConfigurationName)\$(TargetFileName) $(SolutionDir)..\lib"
 			/>
 		</Configuration>
 		<Configuration
