--- a/src/TestFactors/Test.csproj
+++ b/src/TestFactors/Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6531406C-5591-4C6B-8C86-AFDB5E3B8D1C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestFactors</RootNamespace>
-    <AssemblyName>TestFactors</AssemblyName>
+    <RootNamespace>MultiAlign.Test</RootNamespace>
+    <AssemblyName>MultiAlignTestSuite</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Factors\testFactors.cs" />
     <Compile Include="Heatmap\testHeatmap.cs" />
+    <Compile Include="PeakMatching\IMSPeakMatchingTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -67,9 +68,17 @@
       <Project>{74B1D21D-3B38-4605-A617-4CA55683311C}</Project>
       <Name>MultiAlignWin</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MultiAlign\MultiAlign.vcproj">
+      <Project>{5A7E3D3C-03F3-4586-8A2C-BAE1EBA4623E}</Project>
+      <Name>MultiAlignEngine</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PNNLControls\PNNLControls.csproj">
       <Project>{9409DE9B-F3F0-41AA-95F5-8BFD525F5669}</Project>
       <Name>PNNLControls</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PNNLProteomics\PNNLProteomics.csproj">
+      <Project>{BDFA22C4-5822-4AA5-996E-6FDE57F7118B}</Project>
+      <Name>PNNLProteomics</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
