Test cases for loading a MTDB.  Fixed local MTDB string (problem).   But at least a test case none the least

--- a/src/TestFactors/Test.csproj
+++ b/src/TestFactors/Test.csproj
@@ -59,6 +59,7 @@
     </Compile>
     <Compile Include="Factors\testFactors.cs" />
     <Compile Include="Heatmap\testHeatmap.cs" />
+    <Compile Include="MTDBLoading\MTDBLoaderAccessTest.cs" />
     <Compile Include="PeakMatching\IMSPeakMatchingTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
